all-in-one.yml
apiVersion: v1
kind: Namespace
metadata:
  name: default
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
  namespace: default
  labels:
    app: ghost 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ghost
  template:
    metadata:
      labels:
        app: ghost
    spec:
      volumes:
      - name: ghost-content
        persistentVolumeClaim:
          claimName: ghost-claim
      containers:
      - name: ghost
        image: gethuraviacrdemo.azurecr.io/gethuravighostapp:latest
        imagePullPolicy: Always
        volumeMounts:
        - name: ghost-content
          mountPath: /var/lib/ghost/content
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
        ports:
        - name: http
          containerPort: 2368
          protocol: TCP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: ghost
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-ghost
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
spec:
  rules:
  - http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ghost
            port:
              number: 80
